conf/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tf-api
  labels:
    app: tf-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tf-api
  template:
    metadata:
      labels:
        app: tf-api
    spec:
      containers:
        - name: tf-api
          image: image-registry.openshift-image-registry.svc:5000/openshift/tf_api:latest
          ports:
            - containerPort: 8080
      serviceAccountName: tf-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifacts
  labels:
    app: artifacts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifacts
  template:
    metadata:
      labels:
        app: artifacts
    spec:
      containers:
        - name: artifacts
          image: image-registry.openshift-image-registry.svc:5000/openshift/tf_artifacts:latest
          ports:
            - containerPort: 8090 # rsync
            - containerPort: 8080 # http server
          volumeMounts:
            - name: tmt-results
              mountPath: /srv/results
      serviceAccountName: tf-artifacts
      volumes:
        - name: tmt-results
          persistentVolumeClaim:
            claimName: tmt-results
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tf-api
  name: tf-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: tf-api
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tf-api
  labels:
    shard: internal
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: tf-api
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: artifacts
  name: artifacts
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: server
  - port: 873
    protocol: TCP
    targetPort: 8090
    name: rsync
  selector:
    app: artifacts
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: artifacts
    shard: internal
  name: artifacts
spec:
  port:
    targetPort: server
  to:
    kind: Service
    name: artifacts
