conf/base/test-console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-console
  labels:
    app: test-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-console
  template:
    metadata:
      labels:
        app: test-console
    spec:
      containers:
        - name: test-console
          image: quay.io/ahadas/test-console:latest
          ports:
            - containerPort: 8000
            - containerPort: 8443
          volumeMounts:
            - name: test-console-storage
              mountPath: /var/lib/test-console
            - name: test-console-secret
              mountPath: /etc/pki/nginx/private/test-console.key
              subPath: tls.key
            - name: test-console-secret
              mountPath: /etc/pki/nginx/test-console-chain.pem
              subPath: tls.crt
      volumes:
        - name: test-console-storage
          persistentVolumeClaim:
            claimName: test-console-storage
        - name: test-console-secret
          secret:
            secretName: test-console
---
kind: Service
apiVersion: v1
metadata:
  name: test-console
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: test-console
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
  selector:
    app: test-console
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: test-console
spec:
  to:
    kind: Service
    name: test-console
    weight: 100
  port:
    targetPort: 8443
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
